--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -32,7 +32,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.33.10", virtualbox__intnet: "ansibleplaybook"
+  config.vm.network "private_network", ip: "192.168.33.10"
   config.vm.hostname = "hadoop.example.com"
 
   # Create a public network, which generally matched to bridged network.
